# Bron-Kerbosch

./: CMakeLists.txt  README.md  main.cpp
